configurable maxVisits for katago playouts

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -138,6 +138,8 @@ dependencies {
 
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
 
+    implementation 'com.github.sephiroth74:NumberSlidingPicker:v1.0.3'
+
     implementation 'com.github.blennerSilva:AwesomeDialog:2.0.6'
 
     implementation('io.socket:socket.io-client:2.0.1') {
