--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        resources.excludes.add("META-INF/*")
+    }
 }
 
 dependencies {
@@ -177,6 +180,16 @@ dependencies {
     implementation 'androidx.test.espresso:espresso-idling-resource:3.4.0'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    implementation 'com.github.tony19:logback-android:2.0.0'
+    implementation('com.github.toomasr:sgf4j:sgf4j-parser-0.0.6') {
+        // Force to use android logging
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-api'
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-core'
+    }
+
+    implementation 'com.vmadalin:easypermissions-ktx:1.0.0'
 
     testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
     testImplementation 'junit:junit:4.13.2'
