--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,15 @@
                 <data android:scheme="http" android:host="*" android:mimeType="application/x-go-sgf" />
                 <data android:scheme="https" android:host="*" android:mimeType="application/x-go-sgf" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="http" android:host="online-go.com" android:mimeType="*/*" />
+                <data android:scheme="https" android:host="online-go.com" android:mimeType="*/*" />
+            </intent-filter>
         </activity>
 
         <meta-data
