--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,15 @@
                     />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.screens.game.BubbleActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:label="@string/app_name"
+            android:exported="true"
+            android:allowEmbedded="true"
+            android:documentLaunchMode="always"
+            android:resizeableActivity="true"
+        />
     </application>
 
 </manifest>
