--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 /local.properties
 /.idea
 .DS_Store
-/build
+**/build
+**/.cxx
 /app/app.iml
 /app/.externalNativeBuild
-/app/.cxx
 app/google-services.json
 app/src/release/google-services.json
 OnlineGo.iml
