--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,7 +103,7 @@ android {
     }
     sourceSets {
         main {
-            assets.srcDirs += file("${project(":engine:katago").buildDir}/bin")
+            //assets.srcDirs += file("${project(":engine:katago").buildDir}/bin")
         }
     }
     namespace 'io.zenandroid.onlinego'
@@ -130,7 +130,6 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-util:$compose_version"
-    implementation "androidx.compose.runtime:runtime-rxjava2:$compose_version"
 
     debugImplementation "androidx.compose.ui:ui-tooling"
 
